# sgi-project

./: .gitignore  CMakeLists.txt  README.md
cmake/: build.cmake  gmock.cmake  init.cmake  install.cmake  qt.cmake
src/app/: CMakeLists.txt  main.cpp
src/domain/: CMakeLists.txt  clipping.cpp  clipping.h  transform.cpp  transform.h  window.cpp  window.h  windowPresenter.cpp
src/geometries/: CMakeLists.txt  bezier.cpp  bezier.h  geometry.h  graphicPoint.cpp  graphicPoint.h  line.cpp  line.h  point.cpp  point.h  point2D.cpp  point2D.h  point3D.cpp  point3D.h  polygon.cpp  polygon.h
src/gui/: CMakeLists.txt  gui_resources.cpp  gui_resources.h  images.qrc  mainwindow.cpp  mainwindow.h  viewPort.cpp  viewPort.h
src/gui/ui_files/: mainwindow.ui
src/utils/: CMakeLists.txt  conversions.cpp  conversions.h
test/domain/: CMakeLists.txt  clippingTests.cpp  transformTests.cpp  windowTests.cpp
test/geometries/: CMakeLists.txt  bezierTests.cpp  geometryTests.cpp  main.cpp  point2DTests.cpp  point3DTests.cpp  pointTests.cpp
